--- a/webapp/test/testsuite.qunit.html
+++ b/webapp/test/testsuite.qunit.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Test suite for the TypeScript Hello World app</title>
-		<script src="../resources/sap/ui/qunit/qunit-redirect.js"></script>
-		<script src="testsuite.qunit.js" data-sap-ui-testsuite></script>
-	</head>
-	<body>
-	</body>
+<head>
+	<title>QUnit test suite for the TypesScript Hello World app</title>
+	<script src="../resources/sap/ui/qunit/qunit-redirect.js"></script>
+	<script src="testsuite.qunit.js" data-sap-ui-testsuite></script>
+</head>
+<body>
+</body>
 </html>
