Update dependencies, add ui5-linter and adapt

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,12 +5,12 @@
 	<title>UI5 TypeScript Hello World App</title>
 	<script id="sap-ui-bootstrap"
 	        src="resources/sap-ui-core.js"
-	        data-sap-ui-resourceroots='{
+	        data-sap-ui-resource-roots='{
 	            "ui5.typescript.helloworld": "./"
 	        }'
 	        data-sap-ui-theme="sap_horizon"
-	        data-sap-ui-compatVersion="edge"
-	        data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
+	        data-sap-ui-compat-version="edge"
+	        data-sap-ui-on-init="module:sap/ui/core/ComponentSupport"
 	        data-sap-ui-async="true"
 	        data-sap-ui-xx-waitForTheme="true"
 	        data-sap-ui-xx-supportedLanguages="en,de"
