--- a/webapp/test.html
+++ b/webapp/test.html
@@ -7,8 +7,8 @@
 	        src="resources/sap-ui-core.js"
 	        data-sap-ui-libs="sap.m"
 	        data-sap-ui-theme="sap_horizon"
-	        data-sap-ui-compatVersion="edge"
-	        data-sap-ui-oninit="onInit"
+	        data-sap-ui-compat-version="edge"
+	        data-sap-ui-on-init="onInit"
 	        data-sap-ui-async="true"
 	></script>
 	<script>
