--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>UI5 TypeScript Hello World App</title>
 	<script id="sap-ui-bootstrap"
-	        src="resources/sap-ui-core.js"
+	        src="https://sdk.openui5.org/nightly/2/resources/sap-ui-core.js"
 	        data-sap-ui-resource-roots='{
 	            "ui5.typescript.helloworld": "./"
 	        }'
