--- a/webapp/test.html
+++ b/webapp/test.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<title>UI5 made easy!</title>
 	<script id="sap-ui-bootstrap"
-	        src="resources/sap-ui-core.js"
+	        src="https://sdk.openui5.org/nightly/2/resources/sap-ui-core.js"
 	        data-sap-ui-libs="sap.m"
 	        data-sap-ui-theme="sap_horizon"
 	        data-sap-ui-compat-version="edge"
