Add correct titles to the tests

--- a/webapp/test/testsuite.qunit.html
+++ b/webapp/test/testsuite.qunit.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<script
-		src="../../../../../../../../../resources/sap/ui/test/starter/createSuite.js"
+		src="../resources/sap/ui/test/starter/createSuite.js"
 		data-sap-ui-testsuite="test-resources/ui5/typescript/helloworld/testsuite.qunit"
 		data-sap-ui-resource-roots='{
 			"test-resources.ui5.typescript.helloworld": "./"
